--- a/server/views/books/index.ejs
+++ b/server/views/books/index.ejs
@@ -18,7 +18,7 @@
                   <th class="text-center">Price</th>
                   <th class="text-center">Author</th>
                   <th class="text-center">Genre</th>
-                  <th class="text-center"></th>
+                  <th class="text-center">Description</th>
                   <th class="text-center"></th>
                 </tr>
                 </thead>
@@ -30,6 +30,7 @@
                   <td class="text-center">$<%= books[count].Price %></td>
                   <td class="text-center"><%= books[count].Author %></td>
                   <td class="text-center"><%= books[count].Genre %></td>
+                  <td class="text-center"><%= books[count].Description %></td>
 
                   <td class="text-center">
                     <!-- ------------------------ -->
