--- a/server/views/books/details.ejs
+++ b/server/views/books/details.ejs
@@ -28,9 +28,9 @@
               </div>
               <div class="form-group">
                 <label for="Description">Description</label>
-                <textarea class="form-control" id="Description" rows="3"
-                name="Description" placeholder=<%= books.Description %> required
-                ></textarea>
+                  <textarea class="form-control" id="Description" rows="3"
+                    name="Description" placeholder=<%= books.Description %> required>
+                  </textarea>
               </div>
               <button type="submit" class="btn btn-primary"><i class="fa fa-check-square-o"></i> Submit</button>
               <a href="/books" class="btn btn-warning"><i class="fa fa-undo"></i> Cancel</a>
