--- a/server/views/books/index.ejs
+++ b/server/views/books/index.ejs
@@ -36,12 +36,14 @@
                     <!-- ------------------------ -->
                     <!-- ADD the EDIT BUTTON HERE -->
                     <!-- ------------------------ -->
+                    <a href="books/<%= books[count]._id %>" class="btn btn-primary btn-sm"></i>
                   </td>
 
                   <td class="text-center">
                     <!-- ------------------------ -->
                     <!-- ADD the DELETE BUTTON HERE -->
-                    <!-- ------------------------ -->
+                    <!-- ------------------------ -->     
+                    <a href="books/delete/<%= books[count]._id %>" class="btn btn-danger btn-sm"></i>Delete</a>
                   </td>
                 </tr>
                 <% } %>
