Fixed Edit button

--- a/server/views/books/index.ejs
+++ b/server/views/books/index.ejs
@@ -36,7 +36,7 @@
                     <!-- ------------------------ -->
                     <!-- ADD the EDIT BUTTON HERE -->
                     <!-- ------------------------ -->
-                    <a href="books/<%= books[count]._id %>" class="btn btn-primary btn-sm"></i>
+                    <a href="books/<%= books[count]._id %>" class="btn btn-primary btn-sm">Edit</i>
                   </td>
 
                   <td class="text-center">
