--- a/server/views/books/details.ejs
+++ b/server/views/books/details.ejs
@@ -27,10 +27,10 @@
                 placeholder="Book Genre" name="Genre" value="<%= books.Genre %>"  required>
               </div>
               <div class="form-group">
-                <label for="description">Description</label>
-                <textarea class="form-control" id="description" rows="3"
-                name="description" placeholder=<%= books.Description %>
-                ></textarea>
+                <label for="Description">Description</label>
+                <textarea class="form-control" id="Description" rows="3"
+                name="Description" placeholder="Enter Component Description" required
+                ><%= books.Description %></textarea>
               </div>
               <button type="submit" class="btn btn-primary"><i class="fa fa-check-square-o"></i> Submit</button>
               <a href="/books" class="btn btn-warning"><i class="fa fa-undo"></i> Cancel</a>
