--- a/server/views/partials/footer.ejs
+++ b/server/views/partials/footer.ejs
@@ -1,9 +1,9 @@
-
-<nav class="navbar navbar-inverse navbar-fixed-bottom">
-  <div class="container">
-    <h4  class="navbar-text">&copy; 2017 All Rights Reserved.</h4>
+<footer class="navbar navbar-inverse navbar-fixed-bottom">
+  <div class="container text-center">
+    <h4 style="color: white;">&copy; 2020 All Rights Reserved.</h4>
+    <p style="color: white;"> Ishan Gangji</p>
   </div>
-</nav>
+</footer>
 
 
 
