--- a/server/views/books/index.ejs
+++ b/server/views/books/index.ejs
@@ -20,6 +20,7 @@
                   <th class="text-center">Genre</th>
                   <th class="text-center">Description</th>
                   <th class="text-center"></th>
+                  <th class="text-center"></th>
                 </tr>
                 </thead>
                 <tbody>
