--- a/server/views/content/index.ejs
+++ b/server/views/content/index.ejs
@@ -3,9 +3,11 @@
     <!-- MAIN CONTENT -->
     <div class="container">
       <div class="row">
-        <div class="col-md-offset-3 col-md-6">
-          <h1><%= title %></h1>
+        <div class="jumbotron col-md-offset-3 col-md-6 text-center">
             <h2>Welcome to the <%= title %> Page</h2>
+            <small>By: Ishan Gangji</small>
+            <br>
+            <small>Date: Monday Oct 8th 2020</small>
         </div>
       </div>
     </div>
