--- a/server/views/books/index.ejs
+++ b/server/views/books/index.ejs
@@ -37,14 +37,15 @@
                     <!-- ------------------------ -->
                     <!-- ADD the EDIT BUTTON HERE -->
                     <!-- ------------------------ -->
-                    <a href="books/<%= books[count]._id %>" class="btn btn-primary btn-sm">Edit</i>
+                    <a href="books/<%= books[count]._id %>" class="btn btn-primary btn-sm"> <i class="fa fa-edit"></i>Edit</a>
                   </td>
 
                   <td class="text-center">
                     <!-- ------------------------ -->
                     <!-- ADD the DELETE BUTTON HERE -->
-                    <!-- ------------------------ -->     
-                    <a href="books/delete/<%= books[count]._id %>" class="btn btn-danger btn-sm"></i>Delete</a>
+                    <!-- ------------------------ -->   
+                    <a href="books/delete/<%= books[count]._id %>" class="btn btn-danger btn-sm">
+                      <i class="fa fa-remove"></i>Delete</a>
                   </td>
                 </tr>
                 <% } %>
